# MRR-Language

./: LICENSE  README.md
compiler/: CMakeLists.txt
compiler/include/mrr/codegen/: codegen.h
compiler/include/mrr/driver/: cli.h
compiler/include/mrr/ir/: ir_builder.h  ir_node.h
compiler/include/mrr/lexer/: lexer.h  token.h
compiler/include/mrr/parser/: ast.h  parser.h
compiler/include/mrr/sema/: symbol_table.h  type_checker.h
compiler/pipeline/: build_pipeline.py  llvm_codegen.py  obfuscator.py  signer.py
compiler/src/codegen/: codegen.cpp  x86_64_emitter.cpp
compiler/src/driver/: cli.cpp  main.cpp
compiler/src/ir/: ir_builder.cpp  ir_node.cpp
compiler/src/lexer/: lexer.cpp  token.cpp
compiler/src/parser/: ast.cpp  parser.cpp
compiler/src/sema/: symbol_table.cpp  type_checker.cpp
compiler/tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
debugger/: CMakeLists.txt  dap_server.py
debugger/include/mrr/core/: debug_core.h
debugger/include/mrr/dap/: dap_server.h
debugger/src/: main.cpp
debugger/src/bridge/: kernel_bridge.cpp
debugger/src/core/: debug_core.cpp
debugger/src/dap/: dap_server.cpp
docs/: language_spec.md
examples/: ffi_test.mrr  file_regex.mrr  gui_test.mrr  hello.mrr  hesap_makinesi.mrr  http_client.mrr  kernel_driver.mrr  memory_scan.mrr  memory_scanner.mrr  network_test.mrr  scratch_mem.mrr  shellcode_gen.mrr  test_integer.mrr  test_ua.mrr  vuln_scanner.mrr  vuln_scanner_nmap.mrr
interpreter/: __init__.py  main.py  mrr_evaluator.py  mrr_ffi.py  mrr_formatter.py  mrr_gui.py  mrr_lexer.py  mrr_parser.py  mrr_pkg.py  mrr_repl.py
interpreter/bridges/: __init__.py  mrr_memory_bridge.py  mrr_portswinger_bridge.py
interpreter/lsp/: __init__.py  protocol.py  server.py
loader/: config.yaml  loader.py
runtime/: CMakeLists.txt
runtime/src/crypto/: aes.cpp
runtime/src/kernel/: syscall.cpp
runtime/src/memory/: allocator.cpp
runtime/src/net/: socket.cpp
stdlib/core/: core.mrr
stdlib/exploit/: exploit.mrr
stdlib/io/: io.mrr
stdlib/mem/: mem.mrr
stdlib/memory/: memory.mrr
stdlib/network/: portswinger.mrr
vsix/MRR.Language/: extension.js  language-configuration.json  mrr-language-support-0.1.0.vsix  package.json
vsix/MRR.Language/Grammars/: mrr.tmLanguage.json
vsix/MRR.Language/Snippets/: mrr.json
